# keycompute

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.server  Dockerfile.web  README.ar.md  README.es.md  README.md  README.zh-CN.md  README.zh-TW.md  config.toml.example  docker-compose.yml
.github/workflows/: gpt-pr-review.yml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/src/common/: mod.rs
crates/integration-tests/src/mocks/: database.rs  http_transport.rs  mod.rs  provider.rs
crates/integration-tests/tests/: e2e_api_flow.rs  e2e_auth.rs  e2e_billing_flow.rs  e2e_concurrent.rs  e2e_database.rs  e2e_email_service.rs  e2e_error_handling.rs  e2e_full_chain.rs  e2e_gateway.rs  e2e_http_transport.rs  e2e_observability.rs  e2e_pricing.rs  e2e_provider.rs  e2e_ratelimit.rs  e2e_redis_ratelimit.rs  e2e_redis_runtime.rs  e2e_routing.rs  e2e_user_tenant.rs
crates/keycompute-auth/: Cargo.toml
crates/keycompute-auth/src/: api_key.rs  jwt.rs  lib.rs  permission.rs  user.rs
crates/keycompute-auth/src/password/: hash.rs  login.rs  mod.rs  register.rs  reset.rs  validator.rs
crates/keycompute-billing/: Cargo.toml
crates/keycompute-billing/src/: calculator.rs  lib.rs  usage_log.rs  usage_source.rs
crates/keycompute-config/: Cargo.toml
crates/keycompute-config/src/: auth.rs  database.rs  distribution.rs  email.rs  gateway.rs  lib.rs  provider.rs  ratelimit.rs  redis.rs  routing.rs  server.rs
crates/keycompute-db/src/migrations/: 001_init.sql  002_create_tenants.sql  009_create_user_credentials.sql  010_create_email_verifications.sql  011_create_password_resets.sql  012_create_user_referrals.sql  013_add_level_to_distribution_records.sql
crates/keycompute-db/src/models/: distribution_record.rs  email_verification.rs  mod.rs  password_reset.rs  system_setting.rs  tenant.rs  tenant_distribution_rule.rs  user_credential.rs  user_referral.rs
crates/keycompute-distribution/: Cargo.toml
crates/keycompute-distribution/src/: calculator.rs  lib.rs  records.rs  rule.rs
crates/keycompute-emailserver/: Cargo.toml
crates/keycompute-emailserver/src/: lib.rs
crates/keycompute-pricing/: Cargo.toml
crates/keycompute-pricing/src/: lib.rs
crates/keycompute-ratelimit/src/: lib.rs  redis.rs
crates/keycompute-routing/: Cargo.toml
crates/keycompute-routing/src/: lib.rs
crates/keycompute-runtime/src/: account_state.rs  cooldown.rs  provider_health.rs
crates/keycompute-server/: Cargo.toml
crates/keycompute-server/src/: error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
crates/keycompute-server/src/handlers/: admin.rs  auth.rs  billing.rs  chat.rs  distribution.rs  gateway.rs  health.rs  mod.rs  models.rs  openai.rs  payment.rs  pricing.rs  routing.rs  user.rs
crates/keycompute-types/src/: error.rs
crates/llm-gateway/src/: executor.rs  failover.rs  normalize.rs  retry.rs  streaming.rs
crates/llm-provider/keycompute-openai/src/: adapter.rs  stream.rs
crates/llm-provider/keycompute-provider-trait/src/: stream.rs
docs/: api_non_stream.py  api_stream.py
nginx/: nginx.conf
scripts/github/: review_pr.py
