[package]
name = "keycompute-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
keycompute-db = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
# 密码哈希
argon2 = "0.5"
password-hash = "0.5"
# 邮箱验证
regex = "1"
# 随机令牌生成
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
