[package]
name = "keycompute-billing"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
keycompute-db = { workspace = true }
keycompute-distribution = { workspace = true }
keycompute-config = { workspace = true }
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.35"
tracing = "0.1"
