[package]
name = "keycompute-pricing"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
keycompute-db = { workspace = true }
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = "1.40"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
